...
            }
      }
}

object SignInScreenTestTags {
  const val SCREEN = "SignInScreen"
  const val LOGIN_BUTTON = "loginButton"
  const val SIGN_UP_BUTTON = "signUpButton"
  const val LOGIN_TITLE = "loginTitle"
  const val EMAIL_FIELD = "emailField"
  const val PASSWORD_FIELD = "passwordField"
  const val FORGOT_PASSWORD = "forgotPassword"
  const val LOGIN_DIVIDER = "loginDivider"
...
