...
              }
        }
      })
}

object MapScreenTestTags {
  const val GOOGLE_MAP_SCREEN = "googleMapScreen"
  const val TOP_BAR_MAP_TITLE = "topBarMapTitle"
  const val INFO_BOX = "infoBox"
  const val REPORT_FILTER_MENU = "reportFilterDropdownMenu"
  const val INFO_NAVIGATION_BUTTON = "navigationButton"
  const val REFRESH_BUTTON = "mapRefreshButton"
  const val VISIBILITY_MENU = "mapDisplayVisibilityMenu"
...
