...
  fun textForCountdown(cd: Int): String {
    return if (cd > 0) "Can resend email in $cd seconds" else ""
  }
}

object VerifyEmailScreenTestTags {
  const val WELCOME = "Welcome"
  const val SEND_EMAIL = "SendEmail"
  const val SNACKBAR = "Snackbar"
}

